# advent-of-code-2023

./: .editorconfig  .gitignore  LICENSE  aoc2023.opam  dune-project
01/: day01.ml  dune
02/: day02.ml  dune
03/: day03.ml  dune
04/: day04.ml  dune
05/: day05.ml  dune
06/: day06.ml  dune
07/: day07.ml  dune
08/: day08.ml  dune
09/: day09.ml  dune
